# Truchas

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  python_requirements.txt
docs/source/: conf.py  index.rst
shaders/: compile_shaders.bat  compile_shaders.sh  fragment.frag  vert.spv  vertex.vert
src/: config.h  config.h.in  model.cpp  model.hpp  observer.cpp  observer.hpp  pch.hpp  sketch.cpp  sketch.hpp  subject.cpp  subject.hpp  truchas.cpp  truchas.hpp
test/: CMakeLists.txt  test_render.cpp
